[tool.poetry]
name = "seats-aero-viz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "seats_aero" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
altair = "^5"
requests = "^2.28.2"
pandas = "^1.5.3"
streamlit = "^1.20.0"
humanize = "^4.6.0"
airportsdata = "^20230323"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pyright = "^1.1.350"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]